namespace Sharpy
{
    public interface IIdentifiable
    {
        int __Id__();
    }
}
