namespace Sharpy;

public interface IStrConvertible : IRepresentable
{
    string __Str__();
}
