namespace Sharpy
{
    public sealed partial class Set<T>
    {
    }
}
