@startuml Sharpy

interface "Sharpy.IHashable"
interface "Sharpy.IEquatable"
interface "Sharpy.IEquatableWith<T>"
interface "Sharpy.IEquatable<T>"
interface "Sharpy.IIdentifiable"
interface "Sharpy.IBoolConvertible"
interface "Sharpy.IStrConvertible"
interface "Sharpy.IInequatable<T>"
interface "Sharpy.IInequatableWith<T>"
interface "Sharpy.IEquatable"
interface "Sharpy.Collections.Interfaces.IMutableSequence<S, T>"
interface "Sharpy.Collections.Interfaces.IMutableSequence<T>"
interface "Sharpy.Collections.Interfaces.IMutableSet<S, T>"
interface "Sharpy.Collections.Interfaces.IMutableSet<T>"
interface "Sharpy.Collections.Interfaces.ISequence<S, T>"
interface "Sharpy.Collections.Interfaces.ISequence<T>"
interface "Sharpy.Collections.Interfaces.ISet<S, T>"
interface "Sharpy.Collections.Interfaces.ISet<T>"
interface "System.IEquatable<T>"
interface "Sharpy.Collections.Interfaces.ICollection<T>"
interface "Sharpy.Collections.Interfaces.IReversible<T>"
interface "Sharpy.Collections.Interfaces.IContainer<T>"
interface "Sharpy.Collections.Interfaces.IIterable<T>"
interface "Sharpy.Collections.Interfaces.ISized"
interface "System.Collections.Generic.ICollection<T>"
interface "System.Collections.Generic.IEnumerable<T>"

class "System.Object"
class "Sharpy.Object"
class "Sharpy.List<T>"
class "Sharpy.Set<T>"
class "Sharpy.Iterator<T>"

"Sharpy.Object" --|> "System.Object"
"Sharpy.Object" ..|> "Sharpy.IEquatable<T>"
"Sharpy.Object" ..|> "Sharpy.IInequatable<T>"
"Sharpy.Object" ..|> "Sharpy.IIdentifiable"
"Sharpy.Object" ..|> "Sharpy.IStrConvertible"
"Sharpy.Object" ..|> "Sharpy.IBoolConvertible"
"Sharpy.Set<T>" ..|> "Sharpy.Collections.Interfaces.IMutableSet<S, T>"
"Sharpy.Set<T>" --|> "Sharpy.Object"
"Sharpy.List<T>" --|> "Sharpy.Object"
"Sharpy.List<T>" ..|> "Sharpy.IEquatable<T>"
"Sharpy.List<T>" ..|> "Sharpy.Collections.Interfaces.IMutableSequence<S, T>"
"Sharpy.Iterator<T>" ..|> "Sharpy.Collections.Interfaces.IIterable<T>"

"Sharpy.IEquatable<T>" --|> "Sharpy.IEquatableWith<T>"
"Sharpy.IInequatable<T>" --|> "Sharpy.IInequatableWith<T>"
"Sharpy.IInequatableWith<T>" --|> "Sharpy.IEquatableWith<T>"
"Sharpy.IEquatableWith<T>" --|> "Sharpy.IEquatable"
"Sharpy.IEquatableWith<T>" --|> "System.IEquatable<T>"
"Sharpy.IEquatable" --|> "Sharpy.IHashable"
"Sharpy.Collections.Interfaces.IMutableSequence<S, T>" --|> "Sharpy.Collections.Interfaces.IMutableSequence<T>"
"Sharpy.Collections.Interfaces.IMutableSet<S, T>" --|> "Sharpy.Collections.Interfaces.IMutableSet<T>"
"Sharpy.Collections.Interfaces.IMutableSequence<S, T>" --|> "Sharpy.Collections.Interfaces.ISequence<S, T>"
"Sharpy.Collections.Interfaces.IMutableSet<S, T>" --|> "Sharpy.Collections.Interfaces.ISet<S, T>"
"Sharpy.Collections.Interfaces.IMutableSet<T>" --|> "Sharpy.Collections.Interfaces.ISet<T>"
"Sharpy.Collections.Interfaces.ISet<S, T>" --|> "Sharpy.Collections.Interfaces.ISet<T>"
"Sharpy.Collections.Interfaces.IMutableSequence<T>" --|> "Sharpy.Collections.Interfaces.ISequence<T>"
"Sharpy.Collections.Interfaces.ISequence<S, T>" --|> "Sharpy.Collections.Interfaces.ISequence<T>"
"Sharpy.Collections.Interfaces.ISequence<T>" --|> "Sharpy.Collections.Interfaces.ICollection<T>"
"Sharpy.Collections.Interfaces.ISequence<T>" --|> "Sharpy.Collections.Interfaces.IReversible<T>"
"Sharpy.Collections.Interfaces.ICollection<T>" --|> "Sharpy.Collections.Interfaces.IContainer<T>"
"Sharpy.Collections.Interfaces.ICollection<T>" --|> "Sharpy.Collections.Interfaces.IIterable<T>"
"Sharpy.Collections.Interfaces.ICollection<T>" --|> "Sharpy.Collections.Interfaces.ISized"
"Sharpy.Collections.Interfaces.ICollection<T>" --|> "System.Collections.Generic.ICollection<T>"
"Sharpy.Collections.Interfaces.IIterable<T>" --|> "System.Collections.Generic.IEnumerable<T>"
"Sharpy.Collections.Interfaces.ISet<T>" --|> "Sharpy.Collections.Interfaces.ICollection<T>"
"Sharpy.Collections.Interfaces.ISet<T>" --|> "Sharpy.IEquatable<T>"
"Sharpy.Collections.Interfaces.ISet<T>" --|> "Sharpy.IInequatable<T>"

@enduml
